--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="relative path to CSS file"><meta charset="utf-8">
+    <link rel="stylesheet" href="relative path to CSS file">
+    <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
    
   </head>
